@@ -1,3 +1,6 @@
+2015-04-09 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Padding in ranges in model file is supported (ticket #188)
+
 2015-04-08 Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Display a message when load/unloading modules (ticket #182)
 
